[package]
name = "fractional_cascading"
version = "0.3.0"
authors = ["Innokentiy Popov"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Great1ng/fractional_cascading"
license = "MIT License"
keywords = ["fractional_cascading", "search"]

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
criterion = "0.5.1"

[[bench]]
name = "search"
harness = false

[[test]]
name = "random_data"

